Bug 1440816: Part 1 - Set readPrincipals callback on JS context. r=fitzgen

MozReview-Commit-ID: L9SQ5tiHkl5